--- a/PoC_03/traefik.yml
+++ b/PoC_03/traefik.yml
@@ -7,3 +7,10 @@ api:
 
 providers:
   docker: {}
+
+log:
+  filePath: "/etc/traefik/traefik.log"
+  level: DEBUG
+
+accessLog:
+  filePath: "/etc/traefik/access.log"
