--- a/PoC_05/traefik.yml
+++ b/PoC_05/traefik.yml
@@ -12,4 +12,10 @@ api:
 
 
 providers:
-  docker: {}
+  docker:
+    network: traefik-public
+    swarmMode: true
+
+metrics:
+  prometheus:
+    addRoutersLabels: true
