--- a/PoC_03/compose.yaml
+++ b/PoC_03/compose.yaml
@@ -8,52 +8,36 @@ services:
       - "8080:8080" # The Web UI
     volumes:
       - ./traefik.yml:/etc/traefik/traefik.yml
+      - ./traefik.log:/etc/traefik/traefik.log
+      - ./access.log:/etc/traefik/access.log
       - /var/run/docker.sock:/var/run/docker.sock #listen to the Docker events
-    profiles: ["base"]
-
-
-  ws1:
-    image: php:8.2-apache
-    volumes:
-      - ./ws1/index.php:/var/www/html/index.php
-    labels:
-      - "traefik.http.routers.ws1.rule=Host(`localhost`)"
-      - "traefik.http.services.ws1.loadBalancer.sticky.cookie.name=routing_cookie"
-      
-    deploy:
-      replicas: 3
-    profiles: ["ws1"]
-
 
   
-  ws2:
+  ws:
     image: php:8.2-apache
     volumes:
-      - ./ws2/index.php:/var/www/html/index.php
+      - ./index.php:/var/www/html/index.php
     labels:
-      - "traefik.http.routers.ws2.rule=Host(`localhost`)"
-      - traefik.http.routers.ws2.priority=5
-      - traefik.http.routers.ws1.priority=1
-      - "traefik.http.services.ws2.loadBalancer.sticky.cookie.name=routing_cookie"
-        
+      - "traefik.http.routers.ws.rule=Host(`localhost`)"
+
+      - "traefik.http.services.ws.loadBalancer.healthCheck.path=/"
+      - "traefik.http.services.ws.loadBalancer.healthCheck.interval=1s"
+
+    restart: always
+
     deploy:
       replicas: 3
-    profiles: ["ws2"]
-
-
 
 
   locust_master:
-    image: locustio/locust:2.16.1
+    image: locustio/locust
     labels:
       - traefik.enable=false
     ports:
      - "9089:8089"
     volumes:
       - ./:/mnt/locust
-    command: -f /mnt/locust/locustfile.py --master -H http://traefik:80 -u 500 -r 50
-    profiles: ["base"]
-
+    command: -f /mnt/locust/locustfile.py --master -H http://traefik:80 -u 50 -r 50
   
   locust_worker:
     image: locustio/locust
@@ -62,4 +46,3 @@ services:
     volumes:
       - ./:/mnt/locust
     command: -f /mnt/locust/locustfile.py --worker --master-host locust_master
-    profiles: ["base"]
