--- a/PoC_04/compose.yaml
+++ b/PoC_04/compose.yaml
@@ -8,41 +8,71 @@ services:
       - "8080:8080" # The Web UI
     volumes:
       - ./traefik.yml:/etc/traefik/traefik.yml
-      - ./traefik.log:/etc/traefik/traefik.log
-      - ./access.log:/etc/traefik/access.log
       - /var/run/docker.sock:/var/run/docker.sock #listen to the Docker events
+    profiles: ["base"]
 
-  
+
   ws:
-    image: php:8.2-apache
+    image: pgapache
     volumes:
       - ./index.php:/var/www/html/index.php
     labels:
-      - "traefik.http.routers.ws.rule=Host(`localhost`)"
-
-      - "traefik.http.services.ws.loadBalancer.healthCheck.path=/"
-      - "traefik.http.services.ws.loadBalancer.healthCheck.interval=1s"
-
-    restart: always
+      - "traefik.http.services.ws-service.loadbalancer.server.port=80"
+      - traefik.http.routers.ws.rule=Host(`localhost`)
+      - traefik.http.routers.ws.entrypoints=web
 
     deploy:
       replicas: 3
+    profiles: ["base"]
 
-
-  locust_master:
-    image: locustio/locust
-    labels:
-      - traefik.enable=false
+    
+  postgresql-master:
+    image: 'bitnami/postgresql:15.4.0'
     ports:
-     - "9089:8089"
+      - '5432'
     volumes:
-      - ./:/mnt/locust
-    command: -f /mnt/locust/locustfile.py --master -H http://traefik:80 -u 50 -r 50
-  
-  locust_worker:
-    image: locustio/locust
+      - 'postgresql_master_data:/bitnami/postgresql'
+      - ./sql_scripts:/docker-entrypoint-initdb.d
+    
     labels:
-      - traefik.enable=false
-    volumes:
-      - ./:/mnt/locust
-    command: -f /mnt/locust/locustfile.py --worker --master-host locust_master
+      - traefik.tcp.routers.postgresql-master.rule=HostSNI(`*`)
+      - traefik.tcp.routers.postgresql-master.priority=5
+      - traefik.tcp.routers.postgresql-master.entrypoints=db
+
+
+    environment:
+      - POSTGRESQL_REPLICATION_MODE=master
+      - POSTGRESQL_REPLICATION_USER=repl_user
+      - POSTGRESQL_REPLICATION_PASSWORD=repl_password
+      - POSTGRESQL_USERNAME=admin
+      - ALLOW_EMPTY_PASSWORD=yes
+      - POSTGRESQL_LOG_HOSTNAME=true
+
+      - POSTGRESQL_DATABASE=db
+    profiles: ["base"]
+
+  postgresql-slave:
+    image: 'bitnami/postgresql:15.4.0'
+    ports:
+      - '5432'
+    depends_on:
+      - postgresql-master
+    environment:
+      - POSTGRESQL_REPLICATION_MODE=slave
+      - POSTGRESQL_REPLICATION_USER=repl_user
+      - POSTGRESQL_REPLICATION_PASSWORD=repl_password
+      - POSTGRESQL_MASTER_HOST=postgresql-master
+      - POSTGRESQL_USERNAME=postgres
+      - ALLOW_EMPTY_PASSWORD=yes
+      - POSTGRESQL_MASTER_PORT_NUMBER=5432
+    profiles: ["base"]
+    labels:
+      - traefik.tcp.routers.postgresql-slave.entrypoints=db
+      - traefik.tcp.routers.postgresql-slave.rule=HostSNI(`*`)
+      - traefik.tcp.routers.postgresql-slave.priority=1
+
+
+
+
+volumes:
+  postgresql_master_data:
